--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    padding: 0;
     background-color: lightblue
 }
 
@@ -15,12 +16,13 @@ body {
     display: grid;
     grid-template-areas: 'verde vermelho'
     'amarelo azul';
-    grid-gap: 10px;
-    border: 1px solid white;
-    background-color: white;
-    border-radius: 90%;
+    grid-gap: 30px;
+    border: 30px solid black;
+    background-color: black;
+    border-radius: 100%;
     width: 500px;
     height: 500px;
+    position: relative;
 
 }
 
@@ -47,6 +49,20 @@ body {
     background-color: green;
     border-top-left-radius: 100%;
 }
+.iniciar {
+    position: absolute;
+    /* display: flex; */
+    top: 29%;
+    right: 29%;
+    cursor: pointer;
+  }
+  
+.iniciar img {
+    width: 200px;
+    border-radius: 100%;
+    background-color: white;
+    border: 10px solid black;
+  }
 
 .selected {
     opacity: 0.4;
